# nes_emulator

./: .gitignore  Cargo.toml  README.md
src/: apu.rs  bus.rs  cartridge.rs  game_genie.rs  lib.rs  main.rs  memory.rs  replay.rs  savestate.rs
src/cpu/: cpu.rs  cpu_instruction.rs  instruction.rs  mod.rs
src/mapper/: mapper_0.rs  mapper_1.rs  mapper_2.rs  mapper_4.rs  mod.rs
src/ppu/: color.rs  mod.rs
