[package]
name = "nes_emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield-struct = "0.5.6"
bitflags = "2.4.0"
sdl2 = { version = "0.36.0", optional = true }

[features]
logging = []
desktop = ["sdl2"]

[[bin]]
name = "desktop"
required-features = ["desktop"]
